--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -10,8 +10,13 @@
 @using lunchBlazor.Client.Shared
 @using lunchBlazor.Client.Shared.Components
 @using lunchBlazor.Client.Shared.Widget
+@using Blazored.Modal
+@using Blazored.Modal.Services
 @using lunchBlazor.Shared.Models
 @using lunchBlazor.Client.Services.DepartemenService
+@using lunchBlazor.Client.Services.DivisiService
 @using CurrieTechnologies.Razor.SweetAlert2
 @using Sieve.Models
 @using lunchBlazor.Client.Pages.Pengajuan_MPP.Components
+@using lunchBlazor.Client.Pages.Master_Data.Components.Departemen
+@using lunchBlazor.Client.Pages.Master_Data.Components.Divisi
