--- a/Client/Shared/Widget/SelectComponent.razor
+++ b/Client/Shared/Widget/SelectComponent.razor
@@ -6,12 +6,12 @@
         {
             foreach (var item in listItems)
             {
-                <option value="@item">@item</option>
+                <option value="@item.Id">@item.Value</option>
             }
         }
         else
         {
-            <option value="">Insert Items</option>
+            <option value="">No Items</option>
         }
     </select>
 </div>
@@ -22,11 +22,12 @@
     [Parameter]
     public string placeholder { get; set; } = "Choose Items";
     [Parameter]
-    public List<string>? listItems { get; set; }
+    public List<dynamic>? listItems { get; set; }
     [Parameter]
     public string? value { get; set; }
     [Parameter]
     public bool isBold { get; set; } = false;
+
 }
 
 
